samples/_failures_safe/1761798769_4b91b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_922b4e17.c: In function ‘main’:
./samples/SAFE/__tmp_922b4e17.c:146:16: error: missing terminating " character
  146 |         printf("Failed to read matrix input
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_922b4e17.c:146:9: error: expected expression at end of input
  146 |         printf("Failed to read matrix input
      |         ^~~~~~
./samples/SAFE/__tmp_922b4e17.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_922b4e17.c:146:9: error: expected declaration or statement at end of input
